--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
         "build": "encore production --progress"
     },
     "dependencies": {
+        "@popperjs/core": "^2.11.7",
+        "axios": "^1.4.0",
         "bootstrap": "^5.3.0"
     }
 }
